update 3.9 maven